<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="smart_light_name">SmartLight</string>
    <string name="title_activity_ble_set">BleSetActivity</string>
    <string name="title_activity_timer_set">TimerSetActivity</string>
    <string name="title_activity_led_effect">LedEffectActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="slight_version">SLight v151217</string>
    <string name="slight_home">http://easyLED.co.kr</string>
    <string name="led_type_rgb">RGB LED</string>
    <string name="led_type_single">단색 LED</string>
    <string name="led1_str">1</string>
    <string name="led2_str">2</string>
    <string name="led3_str">3</string>
    <string name="led4_str">4</string>
    <string name="led5_str">5</string>
    <string name="led6_str">6</string>
    <string name="led7_str">7</string>
    <string name="led8_str">8</string>
    <string name="led9_str">9</string>
    <string name="rgb1_str">RGB 1</string>
    <string name="rgb2_str">RGB 2</string>
    <string name="rgb3_str">RGB 3</string>
    <string name="ble_scan">검색</string>
    <string name="ble_stop">중지</string>
    <string name="str_close">닫기</string>
    <string name="str_select">선택</string>
    <string name="default_percent">50%</string>
    <string name="action_connect">연결</string>
    <string name="action_help">도움말</string>
    <string name="str_pattern_select">점멸 패턴을 선택하세요.</string>
    <string name="logo_description">Smart Light Logo</string>
    <string name="block_description">Block image</string>
    <string name="pattern_description">Pattern</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_slight_setting">SLight\n설치 방법</string>
    <string name="select_slight_type">SLight 타입을 선택하세요.</string>
    <string name="ble_set_save_preference">블루투스 연결 설정 완료</string>
    <string name="ble_connect_complete">연결되었습니다.</string>
    <string name="ble_try_connect">연결 시도중입니다.</string>
    <string name="tv_easy_bright">밝기 간편 선택</string>
    <string name="tv_detail_bright">밝기 자세히 선택</string>
    <string name="tv_title_current_bright">현재 선택된 밝기: </string>
    <string name="btn_0_percent">OFF</string>
    <string name="btn_20_percent">20%</string>
    <string name="btn_40_percent">40%</string>
    <string name="btn_60_percent">60%</string>
    <string name="btn_80_percent">80%</string>
    <string name="btn_100_percent">100%</string>
    <string name="str_infinite">계속</string>
    <string name="str_minute">분</string>
    <string name="str_ratio">배</string>
    <string name="str_ratio_min">0배</string>
    <string name="str_ratio_max">3배</string>
    <string name="str_sec">초</string>
    <string name="str_sec_min">0.01초</string>
    <string name="str_sec_max">20초</string>
    <string name="str_sec_gap_min">0초</string>
    <string name="str_sec_gap_max">2초</string>
    <string name="title_effect_ratio">LED 효과 시간 비율: </string>
    <string name="title_start_delay">시작 지연 시간: </string>
    <string name="title_end_delay">종료 지연 시간: </string>
    <string name="title_gap_delay">시간 차이: </string>
    <string name="title_activity_slight_setting_info">SLightSettingInfoActivity</string>
    <string name="title_activity_script_list">ScriptListActivity</string>
    <string name="title_activity_test_db">TestDb</string>
    <string name="title_activity_script_data">ScriptDataActivity</string>
    <string name="tab1_script_data">단색</string>
    <string name="tab2_script_data">칼라</string>
    <string name="tab3_script_data">저장소</string>
    <string name="title_activity_slight_setting">알람 설정</string>
    <string name="title_activity_comm">CommActivity</string>
    <string-array name="easy_activity_step">
        <item>0단계 : S-Light 설치</item>
        <item>1단계 : 블루투스 설정</item>
        <item>2단계 : LED 선택</item>
        <item>3단계 : 밝기 설정</item>
        <item>4단계 : 효과 설정</item>
        <item>5단계 : 기타 설정</item>
    </string-array>
    <string name="easy_activity_step_0">0단계 : S-Light 설치</string>
    <string name="ble_selected_device">설정된 장치</string>
    <string name="ble_scan_result_list">검색된 장치 목록</string>
    <string name="ble_default_device_name">Unknown</string>
    <string name="ble_default_device_address">00:00:00:00:00:00</string>
    <string name="ble_change_name">이름변경</string>
    <string name="ble_test_connect">연결테스트</string>
    <string name="easy_check_not_scan">설정된 장치가 있다면 검색 안함</string>
    <string name="easy_mod_name_dialog">스마트라이트 이름 설정</string>
    <string name="easy_progress_dialog">잠시 기다려 주세요.</string>
    <string name="easy_ble_not_connect">연결할 수 없습니다.</string>
    <string name="easy_ble_not_available_connect">검색하여 사용 가능한 스마트라이트를 설정하세요.</string>
    <string name="easy_mod_name_error">이름 변경 중 에러 발생</string>
    <string name="easy_mod_name_success">이름 변경 완료</string>
    <string name="easy_name_length_filter">12byte(한글6자) 까지 입력할 수 있습니다.</string>
    <string name="easy_step_5">5단계</string>
    <string name="easy_step_complete">완료,다른 LED 선택</string>
    <string name="easy_btn_scm100">커넥터 타입 \n(SCM-100)</string>
    <string name="easy_btn_spm100">에나멜선 타입 \n(SPM-100)</string>
    <string name="easy_install_title_scm100">커넥터 타입 스마트라이트 설치 방법</string>
    <string name="easy_install_title_spm100">에나멜선 타입 스마트라이트 설치 방법</string>
    <string name="easy_install_cd_warn">경고 메시지</string>
    <string name="easy_install_cd_scm_desc1">SCM100 준비</string>
    <string name="easy_install_cd_scm_desc2">LED 모듈 연결</string>
    <string name="easy_install_cd_scm_desc3">전원 연결</string>
    <string name="easy_install_cd_spm_desc1">SPM100 준비</string>
    <string name="easy_install_cd_spm_desc2">LED 모듈 에나멜 제거</string>
    <string name="easy_install_cd_spm_desc3">LED 모듈 연결</string>
    <string name="easy_install_cd_spm_desc4">전원 연결</string>
    <string name="easy_install_click_picture">그림을 누르면 확대됩니다.</string>
    <string name="easy_install_chkbox_not_to_show">다시 보지 않기</string>
    <string name="easy_install_notify1">스마트라이트의 정식 LED 모듈과 전원 케이블만 사용해야 합니다.</string>
    <string name="easy_install_notify2">전기가 통하는 금속이나 물과 닿지 않게 주의하십시오.</string>
    <string name="easy_install_desc_scm100_1">1. LED 모듈을 원하는 곳에 장착한 후 스마트 라이트를 준비합니다.</string>
    <string name="easy_install_desc_scm100_2">2. LED 모듈(단색 or RGB LED 모듈)을 스마트라이트 아래쪽 커넥터에 연결합니다.</string>
    <string name="easy_install_desc_scm100_3">3. 전원 케이블(LUP)를 위쪽 커넥터에 연결한 후 USB 전원을 연결합니다.</string>
    <string name="easy_install_desc_spm100_1">1. LED 모듈을 원하는 곳에 장착한 후 스마트 라이트를 준비합니다.</string>
    <string name="easy_install_desc_spm100_2">2. LED 모듈 끝 부분 1cm 를 사포를 이용해 에나멜을 제거합니다.</string>
    <string name="easy_install_desc_spm100_3">3. LED 모듈을 수동 래핑기라는 도구를 이용해 스마트라이트의 핀 부분에 감아줍니다. \n(위:빨간색, 아래:동색)</string>
    <string name="easy_install_desc_spm100_4">4. 전원 케이블(LUP)을 위쪽 커넥터에 연결한 후 USB 전원을 연결합니다.</string>
    <string name="easy_install_youtube_scm100">커넥터 타입 설치 \n 동영상 보기</string>
    <string name="easy_install_youtube_spm100">에나멜선 타입 설치 \n 동영상 보기</string>
    <string name="dialog_image_view">이미지</string>
    <string name="easy_back_notify">1단계로 가면 연결이 끊깁니다.</string>
    <string name="easy_led_select_load_file">불러온 파일:</string>
    <string name="easy_led_select_default_pattern">없음</string>
    <string name="easy_led_select_btn_load_file">불러오기</string>
    <string name="easy_led_select_btn_save_file">저장하기</string>
    <string name="easy_led_select_btn_color_select">색깔선택</string>
    <string name="easy_led_select_tv_title_notify">LED 선택 변경 확인</string>
    <string name="easy_led_select_tv_cancel_notify">이전 적용된 효과가 취소됩니다.</string>
    <string name="easy_effect_select">LED 효과 선택</string>
    <string name="easy_effect_pattern_always">항상켜기/끄기</string>
    <string name="easy_effect_pattern_pulse">깜박이기</string>
    <string name="easy_effect_pattern_flash">번쩍이기</string>
    <string name="easy_effect_pattern_double">두번번쩍</string>
    <string name="easy_effect_pattern_updown">오르내리</string>
    <string name="easy_effect_pattern_firefly">밧딧불이</string>
    <string name="easy_effect_pattern_torch">횃불효과</string>
    <string name="easy_effect_pattern_sin">정현파형</string>
    <string name="easy_effect_pattern_laser">레이저파</string>
    <string name="easy_effect_pattern_breathe">숨쉬는듯</string>
    <string name="easy_effect_pattern_cannon">대포효과</string>
    <string name="easy_effect_pattern_explosion">폭발효과</string>
    <string name="easy_effect_pattern_energy">에네르기파</string>
    <string name="easy_effect_pattern_christmas">크리스마스트리 종합</string>
    <string name="easy_effect_pattern_christmas1">크리스마스트리 1</string>
    <string name="easy_effect_pattern_christmas2">크리스마스트리 2</string>
    <string name="easy_effect_pattern_christmas3">크리스마스트리 3</string>
    <string name="easy_effect_pattern_engine">제트엔진</string>
    <string name="easy_effect_pattern_fluorescent">고장난형광등</string>
    <string name="easy_effect_pattern_lightening">번개효과</string>
    <string name="easy_effect_pattern_welding">용접효과</string>
    <string name="easy_effect_rgb_rainbow">레인보우</string>
    <string name="easy_effect_rgb_rainbow_patel">파스텔 레인보우</string>
    <string name="easy_effect_rgb_sin">정현파형</string>
    <string name="easy_effect_pattern_sound">소리효과</string>
    <string name="easy_effect_not_selected">선택된 LED 가 없습니다.</string>
    <string name="easy_effect_option_start_time">시작시간</string>
    <string name="easy_effect_option_pattern_time">효과시간</string>
    <string name="easy_effect_option_random_time">랜덤시간</string>
    <string name="easy_effect_option_option_string">옵션</string>
    <string name="easy_effect_option_pattern_option">1:켜기</string>
    <string name="easy_effect_option_type">1 / 2</string>
    <string-array name="easy_effect_option_array_pattern_option">
        <item>1:켜기</item>
        <item>2:서서히켜기</item>
        <item>3:끄기</item>
        <item>4:서서히끄기</item>
    </string-array>
    <string-array name="easy_effect_option_array_type">
        <item>1 / 2</item>
        <item>2 / 2</item>
        <item>1 / 3</item>
        <item>2 / 3</item>
        <item>3 / 3</item>
    </string-array>
    <string name="easy_effect_select_start_time">시작 시간 설정</string>
    <string name="easy_effect_title_save">스마트라이트에 저장</string>
    <string name="easy_effect_btn_start_time">시작 시간 설정</string>
    <string name="easy_save_title_sleep">LED 자동 차단 시간 설정</string>
    <string name="easy_save_cb_sleep">LED 차단 후 10분마다 각 1분씩 체크 동작</string>
    <string name="easy_save_btn_sleep">잠자기</string>
    <string name="easy_save_btn_wakeup">깨우기</string>
    <string name="easy_save_title_random">저장되어 있던 LED 효과 실행</string>
    <string name="easy_save_cb_random">무작위 실행</string>
    <string name="easy_save_title_save">설정하신 LED 효과 저장</string>
    <string name="easy_save_btn_exec_a">A 실행</string>
    <string name="easy_save_btn_exec_b">B 실행</string>
    <string name="easy_save_btn_exec_c">C 실행</string>
    <string name="easy_save_btn_save_a">A 저장</string>
    <string name="easy_save_btn_save_b">B 저장</string>
    <string name="easy_save_btn_save_c">C 저장</string>
    <string name="easy_save_step_5_error">옵션 설정에 문제가 발생했습니다. \n잠시 후에 다시 시도하세요.</string>
    <string name="easy_save_data_error">에러가 발생했습니다.</string>
    <string name="easy_save_runtime_a">A 실행 시간</string>
    <string name="easy_save_runtime_b">B 실행 시간</string>
    <string name="easy_save_runtime_c">C 실행 시간</string>
    <string name="easy_save_runtime_random">랜덤 실행 시간</string>
    <string name="easy_ack">전송 완료</string>
    <string name="easy_save_complete">저장 완료</string>
    <string name="easy_load_complete">실행 완료</string>
    <string name="easy_press_next_btn">다음단계 버튼을 누르세요.</string>
    <string name="easy_connect_available">연결 가능합니다.</string>
    <string name="ss_date_1">월</string>
    <string name="ss_date_2">화</string>
    <string name="ss_date_3">수</string>
    <string name="ss_date_4">목</string>
    <string name="ss_date_5">금</string>
    <string name="ss_date_6">토</string>
    <string name="ss_date_7">일</string>
    <string name="ss_alarm_run_time">동작시간: </string>
</resources>