<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        style="@style/ButtonBlackText"
        android:id="@+id/btn_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/easy_effect_option_start_time"/>
    <Button
        style="@style/ButtonBlackText"
        android:id="@+id/btn_pattern_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/easy_effect_option_pattern_time"/>
    <Button
        style="@style/ButtonBlackText"
        android:id="@+id/btn_random_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/easy_effect_option_random_time"/>
</LinearLayout>