<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.syncworks.slight.fragments.SingleAlwaysOn">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tv_easy_bright"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="bottom" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="3">
        <Button
            android:id="@+id/btn_easy_0_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/easy_single_0"
            android:text="@string/btn_0_percent"
            android:textColor="@color/White"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_easy_20_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/easy_single_20"
            android:text="@string/btn_20_percent"
            android:textColor="@color/White"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_easy_40_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/easy_single_40"
            android:text="@string/btn_40_percent"
            android:textColor="@color/White"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_easy_60_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/easy_single_60"
            android:text="@string/btn_60_percent"
            android:textColor="@color/Black"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_easy_80_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/easy_single_80"
            android:text="@string/btn_80_percent"
            android:textColor="@color/Black"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_easy_100_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/easy_single_100"
            android:text="@string/btn_100_percent"
            android:textColor="@color/Black"
            android:layout_weight="1"/>
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tv_detail_bright"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="bottom" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5">
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentStart="true"
            android:text="-"/>
        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentEnd="true"
            android:text="+"/>
        <SeekBar
            android:id="@+id/sb_bright_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn_minus"
            android:layout_toEndOf="@id/btn_minus"
            android:layout_toStartOf="@id/btn_plus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_0_percent"
            android:layout_above="@id/sb_bright_detail"
            android:layout_alignStart="@id/sb_bright_detail"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_100_percent"
            android:layout_above="@id/sb_bright_detail"
            android:layout_alignEnd="@id/sb_bright_detail"/>
        <TextView
            android:id="@+id/tv_title_current_bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_minus"
            android:layout_alignStart="@id/sb_bright_detail"
            android:text="@string/tv_title_current_bright"/>
        <TextView
            android:id="@+id/tv_current_bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10%"
            android:layout_below="@id/btn_minus"
            android:layout_toEndOf="@id/tv_title_current_bright"/>
        </RelativeLayout>

</LinearLayout>
