<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.syncworks.slight.fragment_easy.InstallFragment">
    <LinearLayout
        android:id="@+id/ll_frag_install_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">
        <Button
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:text="@string/easy_btn_scm100"/>
        <Button
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:text="@string/easy_btn_spm100"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_frag_install_btn"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_view_rounded_single">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/easy_install_title_scm100"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp" />
                <TextView
                    android:paddingStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy_install_notify"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp" />
                <TextView
                    android:paddingStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy_install_notify"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
